Dependecy Injection classes complete
