# src/swagger.json
@@ -68,10 +68,74 @@
                   }
                 }
               }
-
+              
             }
           }
-
+          
+        }
+      },
+      "/categories/import": {
+        "post": {
+          "tags": ["Category"],
+          "summary": "Upload a new category",
+          "description": "Upload a new category",
+          "requestBody": {
+            "content": {
+              "multipart/form-data": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "file": {
+                      "type": "string",
+                      "format": "binary"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Created"
+            }
+          }
+        }        
+      },
+      "/specifications": {
+        "post": {
+          "tags": ["Specifications"],
+          "summary":"Create a specification",
+          "description":"Create a new specification",
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/Specification"
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Created"
+            },
+            "500": {
+              "description": "Specifications already exists!"
+            }
+          }          
+        }
+      }      
+    },
+    "definitions": {
+      "Specification": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          }
         }
       }
     }
